--- a/projects/Midas/Packages/manifest.json
+++ b/projects/Midas/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.doji.midas": "file:../../../com.doji.midas",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
