add option to generate pdf using 'docfx --serve docfx-pdf.json' and add pdf to package.

--- a/com.doji.midas/package.json
+++ b/com.doji.midas/package.json
@@ -12,7 +12,7 @@
       "email": "support@doji-tech.com",
       "url": "https://www.doji-tech.com/"
    },
-   "documentationUrl": "https://www.doji-tech.com/midas/",
+   "documentationUrl": "https://docs.doji-tech.com/com.doji.midas/",
    "samples": [
     {
       "displayName": "Shared Sample Assets",
