make sure docs build correctly on CI no UnityEngine references though :(

--- a/docs/filterConfig.yml
+++ b/docs/filterConfig.yml
@@ -5,3 +5,7 @@ apiRules:
 - include:
     uidRegex: ^Global
     type: Namespace
+- exclude:
+    uidRegex: ^Midas\.Editor
+- exclude:
+    uidRegex: ^Midas\.Samples
