--- a/com.doji.midas/package.json
+++ b/com.doji.midas/package.json
@@ -1,21 +1,20 @@
 {
-   "name": "com.doji.midas",
-   "version": "1.0.0",
-   "displayName": "MiDaS",
-   "description": "Monocular Depth Estimation with Unity Sentis",
-   "dependencies": {
-      "com.unity.sentis": "1.3.0-pre.2"
-   },
-   "author":
-   {
-      "name": "Doji Technologies",
-      "email": "support@doji-tech.com",
-      "url": "https://www.doji-tech.com/"
-   },
-   "documentationUrl": "https://docs.doji-tech.com/com.doji.midas/",
-   "samples": [
+  "name": "com.doji.midas",
+  "version": "1.0.0",
+  "displayName": "MiDaS",
+  "description": "Monocular Depth Estimation with Unity Sentis",
+  "dependencies": {
+    "com.unity.sentis": "1.3.0-pre.2"
+  },
+  "author": {
+    "name": "Doji Technologies",
+    "email": "support@doji-tech.com",
+    "url": "https://www.doji-tech.com/"
+  },
+  "documentationUrl": "https://docs.doji-tech.com/com.doji.midas/",
+  "samples": [
     {
-      "displayName": "Shared Sample Assets",
+      "displayName": "Shared Sample Assets (Required)",
       "description": "Shared resources for samples. Any other samples depends on this to be imported.",
       "path": "Samples~/00-SharedSampleAssets"
     },
